feat: added documentation for showOpenings
